[build-system]
requires = ["setuptools>=61", "wheel", "cmake>=3.20", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moose-hit"
description = "HIT Parser for MOOSE"
version = "2025.08.20"
requires-python = ">=3.10"
authors = [
    { name = "Logan Harbour", email = "loganhharbour@gmail.com" },
    { name = "Zachary Prince", email = "zachmprince@gmail.com" },
]

# This is kind of a fake package to put src/include files and include hit CLI
[tool.setuptools.packages.find]
where = ["moose_hit"]
namespaces = false

# Allow for a hit executable to be available on install
[project.scripts]
hit = "moose_hit:main"

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-manylinux_aarch64"]
skip = "pp*, gp*, cp{38,39,314}-*"
test-command = "python -c \"import hit; print(f'hit successfully installed in {hit.__file__}')\""
build-verbosity = 3
