[build-system]
requires = ["setuptools>=61", "wheel", "cmake>=3.20", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moose-hit"
description = "HIT Parser for MOOSE"
version = "2025.08.20"
requires-python = ">=3.10"
authors = [
    { name = "Logan Harbour", email = "loganhharbour@gmail.com" },
    { name = "Zachary Prince", email = "zachmprince@gmail.com" },
]

# This is kind of a fake package to put src/include files and include hit CLI
[tool.setuptools.package-dir]
moose_hit = "moose_hit"

# Allow for a hit executable to be available on install
[project.scripts]
hit = "moose_hit:main"

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-manylinux_aarch64"]
skip = "pp*, gp*, cp{38,39,314}-*"
test-command = [
    "echo \"Setting WASP install directory...\"",
    "export WASP_DIR=$( python -c \"import importlib.resources as rs; print(rs.files('hit').joinpath('moose_wasp'))\" )",
    "echo \"WASP_DIR set to ${WASP_DIR}\"",

    "echo \"Testing hit command-line interface...\"",
    "hit format {package}/test/input.i > /dev/null",
    "echo \"Success!\"",

    "echo \"Running C++ unit tests...\"",
    "make -C {package}/test test",
    "echo \"Success!\"",

    "echo \"Running python unit tests...\"",
    "python {package}/test/test_hit.py",
    "echo \"Success!\"",
]
build-verbosity = 3
